Fix CSS for visited links in dark mode

--- a/docs/k2.css
+++ b/docs/k2.css
@@ -16,6 +16,11 @@ a:link {
     color: lightblue;
 }
 
+.darkmode
+a:visited {
+    color: plum;
+}
+
 #top-container {
     display: flex;
     flex-direction: column;
